--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <filter>
         <filter-name>EncodingFilter</filter-name>
-        <filter-class>com.neil.servlet.filter.EncodingFilter</filter-class>
+        <filter-class>com.neil.filter.EncodingFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
@@ -15,7 +15,7 @@
 
     <filter>
         <filter-name>LoginFilter</filter-name>
-        <filter-class>com.neil.servlet.filter.LoginFilter</filter-class>
+        <filter-class>com.neil.filter.LoginFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
